fixed issue with points(connectivity) method (Test works now)